@@ -127,6 +127,28 @@ test_that("requesting an empty corpus works", {
   
 })
 
+test_that("Different ways of indexing corpus work", {
+  
+  mpds <- mp_maindataset()
+  wanted <- subset(mpds, party==41320 &
+                     edate < as.Date("2010-01-01") &
+                     edate > as.Date("2001-01-01"))
+  corpus <- mp_corpus(wanted)
+  
+  expect_named(corpus)
+  expect_true(all(grepl("\\d{5}_\\d{4}", names(corpus))))
+  
+  expect_is(corpus[[1]], "ManifestoDocument")
+  expect_is(corpus[["41320_2002"]], "ManifestoDocument")
+  expect_equivalent(corpus[["41320_2002"]], corpus[[1]])
+  
+  expect_is(corpus[1], "ManifestoCorpus")
+  expect_is(corpus[1:2], "ManifestoCorpus")
+  expect_is(corpus[c("41320_2005", "41320_2009")], "ManifestoCorpus")
+  
+
+})
+
 test_that("corpus does tm stuff", {
   
   mpds <- mp_maindataset()
@@ -141,7 +163,7 @@ test_that("corpus does tm stuff", {
   
   tdm <- TermDocumentMatrix(corpus)
   expect_is(tdm, "TermDocumentMatrix")
-  expect_true(all(as.vector(tdm["spd",c("1","2")]) > 0)) ## spd should appear in both docs
+  expect_true(all(as.vector(tdm["spd",c("41320_2002", "41320_2005" )]) > 0)) ## spd should appear in both docs
   
   ## specific ManifestoDocument functionality
   expect_true(all(valid_code(codes(corpus))))
